# master_catkin_workspace

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  osf_files.py  rc.local  ros_entrypoint.sh  setup.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/master/: capture  capture.py  capture_pcap.py  record_pcap.py  record_pgr
devel/lib/pkgconfig/: master.pc  ouster_ros.pc  pointgrey_ladybug.pc
devel/lib/pointgrey_ladybug/: ladybug_camera
devel/share/master/cmake/: masterConfig.cmake
devel/share/ouster_ros/cmake/: ouster_ros-msg-paths.cmake  ouster_rosConfig.cmake
devel/share/pointgrey_ladybug/cmake/: pointgrey_ladybugConfig.cmake
devel/share/roseus/ros/ouster_ros/: manifest.l
install_ladybug/ladybug-1.19.0.13-amd64/: configure_ladybug.sh  copyright  install_ladybug.sh  releasenotes.txt
install_ladybug/ladybug-1.20.0.78-amd64/: README  configure_ladybug.sh  install_ladybug.sh  remove_ladybug.sh
src/master/: CMakeLists.txt  package.xml
src/master/launch/: record_ladyouster.launch  record_ladyouster_rosbag.launch  run_ladyouster.launch
src/master/scripts/: record_pcap.py
src/master/src/: Record_PGR.cpp  Record_PGR_old.cpp
src/ouster-ros/config/: rviz_config.rviz
src/ouster-ros/launch/: sensor.launch
