<?xml version="1.0"?>
<package format="2">
  <name>master</name>
  <version>0.0.0</version>
  <description>The master package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="benni@todo.todo">benni</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/master</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>boost</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>spdlog</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>nodelet</exec_depend>
  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>curl</exec_depend>
  <exec_depend>spdlog</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>gtest</test_depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
